[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sprites/turret-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sounds/Retro Gun SingleShot 04.wav" type="AudioStream" id=2]
[ext_resource path="res://src/objects/Turret.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/muzzle-flash.png" type="Texture" id=4]
[ext_resource path="res://src/objects/CasingContainer.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 6.5 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "position",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ null, SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 180.003

[node name="Turret" type="KinematicBody2D" groups=["ally", "turrets"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0.5 )
shape = SubResource( 6 )

[node name="TurretAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "position"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -7.0
bus = "Sound Effects"

[node name="BulletSpawn" type="Sprite" parent="."]
position = Vector2( 3, 0 )

[node name="MuzzleFlash" type="AnimatedSprite" parent="BulletSpawn"]
position = Vector2( 23, 1 )
frames = SubResource( 9 )

[node name="CasingContainer" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="CasingSpawn" type="Node2D" parent="."]
position = Vector2( -2, -1 )

[node name="Radar" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Radar"]
shape = SubResource( 10 )

[connection signal="body_entered" from="Radar" to="." method="_on_Radar_body_entered"]
[connection signal="body_exited" from="Radar" to="." method="_on_Radar_body_exited"]
